--- a/style.css
+++ b/style.css
@@ -65,12 +65,23 @@ nav ul li a:hover, a.active{
 .inp-width{
     min-width: 300px;
 }
-.plus-minus-btn{
+.plus-btn{
     color: #3352F2;
     font-size: 30px;
     padding: 2px;
     margin-top: 10px;
     word-spacing: 20px;
+    border: none;
+    background: none;
+}
+.minus-btn{
+    color: #3352F2;
+    font-size: 45px;
+    padding: 2px;
+    margin-top: 10px;
+    word-spacing: 20px;
+    border: none;
+    background: none;
 }
 .booking-form  .calculations{
     margin: 10px 0;
